jitfailure-dolfin_expression_bb3295e511f9f42ce88c33261cb73728/error.log
/tmp/tmpyrgt_xba/dolfin_expression_bb3295e511f9f42ce88c33261cb73728.cpp: In member function ‘virtual void dolfin::dolfin_expression_bb3295e511f9f42ce88c33261cb73728::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpyrgt_xba/dolfin_expression_bb3295e511f9f42ce88c33261cb73728.cpp:61:53: error: ‘y’ was not declared in this scope
           values[0] = 1 + x[0]*x[0] + 2*x[1]*x[1] + y[3]*y[3];
                                                     ^
/tmp/tmpyrgt_xba/dolfin_expression_bb3295e511f9f42ce88c33261cb73728.cpp:61:53: note: suggested alternative: ‘yn’
           values[0] = 1 + x[0]*x[0] + 2*x[1]*x[1] + y[3]*y[3];
                                                     ^
                                                     yn
